# livelossplot

./: .gitignore  .yapfignore  CHANGELOG.md  LICENSE.md  LICENSE.txt  README.md  create_docs.sh  environment.yml  example.ipynb  index.html  keras_example.ipynb  main_logger.html  minimal_example.ipynb  plot_losses.html  publish.sh  pyproject.toml  pytorch_example.ipynb  pytoune_example.ipynb  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tmp.py  version.html
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question-help-support.md
.github/workflows/: docs.yml  external_packages.yml  flake8_yapf.yml  publish.yml  pythonapp.yml  pythonpackage.yml
examples/: 2d_prediction_maps.ipynb  bokeh-minimal.ipynb  bokeh.ipynb  custom_series.ipynb  keras.ipynb  matplotlib.ipynb  minimal-neptune.py  minimal.ipynb  minimal_all_output.ipynb  multigrup.ipynb  neptune-minimal-jupyter.ipynb  neptune-minimal-terminal.py  neptune.ipynb  neptune.py  poutyne.ipynb  pytorch-ignite.ipynb  pytorch.ipynb  pytoune.ipynb  script.py  test_examples.py  torchbearer.ipynb  various_options.ipynb
inputs/: generic_keras.html  index.html
live_loss_plot/: __init__.py  core.py  generic_plot.py  keras_plot.py
livelossplot/: __init__.py  core.py  core_bokeh.py  generic_keras.py  generic_plot.py  keras.py  keras_plot.py  main_logger.py  matplotlib_subplots.py  neptune_integration.py  plot_losses.py  pytorch_ignite.py  pytoune.py  pytoune_plot.py  tensorboard.py  test_main_logger.py  test_plot_losses.py  version.py
livelossplot/input_plugins/: generic_keras.py  keras.py  poutyne.py  pytorch_ignite.py  tf_keras.py
livelossplot/inputs/: __init__.py  generic_keras.py  keras.py  poutyne.py  tf_keras.py  (+1 more)
old/: core.py  generic_plot.py
outputs/: base_output.html  bokeh_plot.html  extrema_printer.html  index.html  matplotlib_plot.html  matplotlib_subplots.html  neptune_logger.html  tensorboard_logger.html  tensorboard_tf_logger.html
tests/: external_api_test_neptune.py  external_test_examples.py  external_test_keras.py  external_test_poutyne.py  external_test_pytorch_ignite.py  external_test_tensorboard.py  test_bokeh_output.py  test_extrema_print.py  test_extrema_printer.py  test_from_step.py  test_main_logger.py  test_plot_losses.py
(+23 files in other folders)
