[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livelossplot"
dynamic = ["version"]  # Version is read from version.py via setuptools config
description = "Live training loss plot in Jupyter Notebook for Keras, PyTorch and others."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["keras", "pytorch", "plot", "chart", "deep-learning"]
authors = [
    {name = "Piotr Migdał", email = "pmigdal@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    'ipython==7.*; python_version<"3.8"',
    'matplotlib',
    'bokeh',
    'numpy<1.22; python_version<"3.8"',
]

[project.urls]
Homepage = "https://github.com/stared/livelossplot"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "twine",
    "wheel",
    "build",
    # Add other dev dependencies if needed (e.g., from the old requirements-dev.txt)
]

[tool.setuptools.dynamic]
# Read version from livelossplot/version.py
version = {attr = "livelossplot.version.__version__"}

[tool.setuptools.packages.find]
# Look for packages in the root directory (no src layout)
where = ["."]

[tool.flake8]
exclude = ".git,*migrations*,build*,old*,dist"
max-line-length = 120

[tool.yapf]
based_on_style = "facebook"
column_limit = 120

# --- Add configuration for tools like flake8 if desired ---
# Example: [tool.flake8]
# ignore = "E501,W503"
# max-line-length = 88
# exclude = ".git,__pycache__,build,dist" 